package NKikimrConfig;
option java_package = "ru.yandex.kikimr.proto";

message THttpServerConfig {
    // Port number is specifed via cli arg --sqs-port, don't set up it in the config
    optional uint32 Port = 1 [default = 8771];
    optional uint32 Threads = 2 [default = 5];
    optional uint32 MaxConnections = 3 [default = 1000]; // 0 - unlimited
    optional uint32 MaxQueueSize = 4 [default = 500]; // 0 - unlimited
    optional bool EnableKeepAlive = 5 [default = true];
}


